<resources>
    <string name="app_name">Simple Maze Game</string>
    <string name="start">Start</string>
    <string name="start_instructions">Navigate through rooms using the direction buttons.</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="you_win">You win!</string>
    <string name="restart">Restart</string>
    <string name="back_to_menu">Back to menu</string>
</resources>
